--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,3 +23,44 @@
 </ng-template>
 </div>
 </section>
+
+<div class="container">
+  <div class="row py-5 justify-content-center">
+   <div class="col-md-8">
+    <h1 class="text-center py-4">Export Data to Excel Sheet in Angular 8</h1>
+    <div class="col-md-12 table-responsive" #epltable>
+     <div style="padding-bottom: 10px;padding-top: 10px;">
+      <div class="row">
+       <div class="col-sm-12">
+        <button (click)="exportToExcel()" class="btn btn-success">Export To Excel</button> 
+       </div>
+      </div>
+     </div>
+     <table class="table table-bordered">
+      <thead class="thead-dark">
+      <tr>
+       <th>Position</th>
+       <th>Club</th>
+       <th>Played</th>
+       <th>Won</th>
+       <th>Drawn</th>
+       <th>Lost</th>
+       <th>Points</th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr *ngFor="let club of clubs">
+       <td>{{club.position}}</td>
+       <td>{{club.name}}</td>
+       <td>{{club.played}}</td>
+       <td>{{club.won}}</td>
+       <td>{{club.drawn}}</td>
+       <td>{{club.lost}}</td>
+       <td>{{club.points}}</td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+  </div>
+ </div>
+</div>
